<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/defaultFragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img">

    <Button
        android:id="@+id/buttonShowOtherCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#008EFF"
        android:text="@string/show_other_city"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/myCityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginTop="16dp"
        android:text="@string/kara_balta"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintTop_toBottomOf="@id/buttonShowOtherCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/fiveDaysWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#008EFF"
        android:text="@string/five_days_weather"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/windSpeedContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="40dp"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/contentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myCityTextView"
        tools:visibility="visible">


        <TextView
            android:id="@+id/tempTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            tools:text="" />

        <TextView
            android:id="@+id/weatherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:layout_marginTop="16dp"
            android:text=""
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/windSpeedContainer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#66FFFFFF"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/feelsLikeContainer"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/windSpeedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind_speed"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/windSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/airHumidityContainer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="#66FFFFFF"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="150dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/feelsLikeContainer"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/airHumidityName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_humidity"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/airHumidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/feelsLikeContainer"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="#66FFFFFF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/airHumidityContainer"
        app:layout_constraintStart_toEndOf="@id/windSpeedContainer">

        <TextView
            android:id="@+id/feelsLikeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/feelsLikeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>